
[TestPrimitiveTypes/any - 1]
&dts_parser.PrimitiveType{
    span: 1:1-1:4,
}
---

[TestPrimitiveTypes/unknown - 1]
&dts_parser.PrimitiveType{
    Kind: 1,
    span: 1:1-1:8,
}
---

[TestPrimitiveTypes/string - 1]
&dts_parser.PrimitiveType{
    Kind: 6,
    span: 1:1-1:7,
}
---

[TestPrimitiveTypes/number - 1]
&dts_parser.PrimitiveType{
    Kind: 7,
    span: 1:1-1:7,
}
---

[TestPrimitiveTypes/boolean - 1]
&dts_parser.PrimitiveType{
    Kind: 8,
    span: 1:1-1:8,
}
---

[TestPrimitiveTypes/symbol - 1]
&dts_parser.PrimitiveType{
    Kind: 10,
    span: 1:1-1:7,
}
---

[TestPrimitiveTypes/null - 1]
&dts_parser.PrimitiveType{
    Kind: 3,
    span: 1:1-1:5,
}
---

[TestPrimitiveTypes/undefined - 1]
&dts_parser.PrimitiveType{
    Kind: 4,
    span: 1:1-1:10,
}
---

[TestPrimitiveTypes/never - 1]
&dts_parser.PrimitiveType{
    Kind: 5,
    span: 1:1-1:6,
}
---

[TestLiteralTypes/string_literal - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.StringLiteral{
        Value: "hello",
        span: 1:1-1:8,
    },
    span: 1:1-1:8,
}
---

[TestLiteralTypes/number_literal - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.NumberLiteral{
        Value: 42,
        span: 1:1-1:3,
    },
    span: 1:1-1:3,
}
---

[TestLiteralTypes/boolean_true - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.BooleanLiteral{
        Value: true,
        span: 1:1-1:5,
    },
    span: 1:1-1:5,
}
---

[TestLiteralTypes/boolean_false - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.BooleanLiteral{
        span: 1:1-1:6,
    },
    span: 1:1-1:6,
}
---

[TestTypeReferences/simple_identifier - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Foo",
        span: 1:1-1:4,
    },
    span: 1:1-1:4,
}
---

[TestTypeReferences/qualified_name - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Member{
        Left: &dts_parser.Ident{
            Name: "Foo",
            span: 1:1-1:4,
        },
        Right: &dts_parser.Ident{
            Name: "Bar",
            span: 1:5-1:8,
        },
    },
    span: 1:1-1:8,
}
---

[TestTypeReferences/nested_qualified_name - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Member{
        Left: &dts_parser.Member{
            Left: &dts_parser.Ident{
                Name: "Foo",
                span: 1:1-1:4,
            },
            Right: &dts_parser.Ident{
                Name: "Bar",
                span: 1:5-1:8,
            },
        },
        Right: &dts_parser.Ident{
            Name: "Baz",
            span: 1:9-1:12,
        },
    },
    span: 1:1-1:12,
}
---

[TestTypeReferences/with_type_args - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Array",
        span: 1:1-1:6,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.PrimitiveType{
            Kind: 6,
            span: 1:7-1:13,
        },
    },
    span: 1:1-1:14,
}
---

[TestTypeReferences/with_multiple_type_args - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Map",
        span: 1:1-1:4,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.PrimitiveType{
            Kind: 6,
            span: 1:5-1:11,
        },
        &dts_parser.PrimitiveType{
            Kind: 7,
            span: 1:13-1:19,
        },
    },
    span: 1:1-1:20,
}
---

[TestTypeReferences/nested_type_args - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Array",
        span: 1:1-1:6,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Map",
                span: 1:7-1:10,
            },
            TypeArgs: []dts_parser.TypeAnn{
                &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1:11-1:17,
                },
                &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 1:19-1:25,
                },
            },
            span: 1:7-1:26,
        },
    },
    span: 1:1-1:27,
}
---

[TestUnionTypes/simple_union - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.PrimitiveType{
            Kind: 6,
            span: 1:1-1:7,
        },
        &dts_parser.PrimitiveType{
            Kind: 7,
            span: 1:10-1:16,
        },
    },
    span: 1:1-1:16,
}
---

[TestUnionTypes/three_types - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.PrimitiveType{
            Kind: 6,
            span: 1:1-1:7,
        },
        &dts_parser.PrimitiveType{
            Kind: 7,
            span: 1:10-1:16,
        },
        &dts_parser.PrimitiveType{
            Kind: 8,
            span: 1:19-1:26,
        },
    },
    span: 1:1-1:26,
}
---

[TestUnionTypes/with_type_refs - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 1:1-1:4,
            },
            span: 1:1-1:4,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Bar",
                span: 1:7-1:10,
            },
            span: 1:7-1:10,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Baz",
                span: 1:13-1:16,
            },
            span: 1:13-1:16,
        },
    },
    span: 1:1-1:16,
}
---

[TestIntersectionTypes/simple_intersection - 1]
&dts_parser.IntersectionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 1:1-1:4,
            },
            span: 1:1-1:4,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Bar",
                span: 1:7-1:10,
            },
            span: 1:7-1:10,
        },
    },
    span: 1:1-1:10,
}
---

[TestIntersectionTypes/three_types - 1]
&dts_parser.IntersectionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 1:1-1:4,
            },
            span: 1:1-1:4,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Bar",
                span: 1:7-1:10,
            },
            span: 1:7-1:10,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Baz",
                span: 1:13-1:16,
            },
            span: 1:13-1:16,
        },
    },
    span: 1:1-1:16,
}
---

[TestParenthesizedTypes/simple_paren - 1]
&dts_parser.ParenthesizedType{
    Type: &dts_parser.PrimitiveType{
        Kind: 6,
        span: 1:2-1:8,
    },
    span: 1:1-1:9,
}
---

[TestParenthesizedTypes/paren_with_union - 1]
&dts_parser.ParenthesizedType{
    Type: &dts_parser.UnionType{
        Types: []dts_parser.TypeAnn{
            &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:2-1:8,
            },
            &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:11-1:17,
            },
        },
        span: 1:2-1:17,
    },
    span: 1:1-1:18,
}
---

[TestParenthesizedTypes/nested_paren - 1]
&dts_parser.ParenthesizedType{
    Type: &dts_parser.ParenthesizedType{
        Type: &dts_parser.PrimitiveType{
            Kind: 6,
            span: 1:3-1:9,
        },
        span: 1:2-1:10,
    },
    span: 1:1-1:11,
}
---

[TestComplexUnionIntersectionCombinations/union_of_intersections - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.ParenthesizedType{
            Type: &dts_parser.IntersectionType{
                Types: []dts_parser.TypeAnn{
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Foo",
                            span: 1:2-1:5,
                        },
                        span: 1:2-1:5,
                    },
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Bar",
                            span: 1:8-1:11,
                        },
                        span: 1:8-1:11,
                    },
                },
                span: 1:2-1:11,
            },
            span: 1:1-1:12,
        },
        &dts_parser.ParenthesizedType{
            Type: &dts_parser.IntersectionType{
                Types: []dts_parser.TypeAnn{
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Baz",
                            span: 1:16-1:19,
                        },
                        span: 1:16-1:19,
                    },
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Qux",
                            span: 1:22-1:25,
                        },
                        span: 1:22-1:25,
                    },
                },
                span: 1:16-1:25,
            },
            span: 1:15-1:26,
        },
    },
    span: 1:1-1:26,
}
---

[TestComplexUnionIntersectionCombinations/intersection_has_higher_precedence - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "A",
                span: 1:1-1:2,
            },
            span: 1:1-1:2,
        },
        &dts_parser.IntersectionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "B",
                        span: 1:5-1:6,
                    },
                    span: 1:5-1:6,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "C",
                        span: 1:9-1:10,
                    },
                    span: 1:9-1:10,
                },
            },
            span: 1:5-1:10,
        },
    },
    span: 1:1-1:10,
}
---

[TestComplexUnionIntersectionCombinations/multiple_levels - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "A",
                span: 1:1-1:2,
            },
            span: 1:1-1:2,
        },
        &dts_parser.IntersectionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "B",
                        span: 1:5-1:6,
                    },
                    span: 1:5-1:6,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "C",
                        span: 1:9-1:10,
                    },
                    span: 1:9-1:10,
                },
            },
            span: 1:5-1:10,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "D",
                span: 1:13-1:14,
            },
            span: 1:13-1:14,
        },
    },
    span: 1:1-1:14,
}
---

[TestComplexUnionIntersectionCombinations/nested_with_parens - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.ParenthesizedType{
            Type: &dts_parser.IntersectionType{
                Types: []dts_parser.TypeAnn{
                    &dts_parser.ParenthesizedType{
                        Type: &dts_parser.UnionType{
                            Types: []dts_parser.TypeAnn{
                                &dts_parser.TypeReference{
                                    Name: &dts_parser.Ident{
                                        Name: "A",
                                        span: 1:3-1:4,
                                    },
                                    span: 1:3-1:4,
                                },
                                &dts_parser.TypeReference{
                                    Name: &dts_parser.Ident{
                                        Name: "B",
                                        span: 1:7-1:8,
                                    },
                                    span: 1:7-1:8,
                                },
                            },
                            span: 1:3-1:8,
                        },
                        span: 1:2-1:9,
                    },
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "C",
                            span: 1:12-1:13,
                        },
                        span: 1:12-1:13,
                    },
                },
                span: 1:2-1:13,
            },
            span: 1:1-1:14,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "D",
                span: 1:17-1:18,
            },
            span: 1:17-1:18,
        },
    },
    span: 1:1-1:18,
}
---

[TestComplexUnionIntersectionCombinations/complex_with_type_args - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Array",
                span: 1:1-1:6,
            },
            TypeArgs: []dts_parser.TypeAnn{
                &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1:7-1:13,
                },
            },
            span: 1:1-1:14,
        },
        &dts_parser.IntersectionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "Map",
                        span: 1:17-1:20,
                    },
                    TypeArgs: []dts_parser.TypeAnn{
                        &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 1:21-1:27,
                        },
                        &dts_parser.PrimitiveType{
                            Kind: 7,
                            span: 1:29-1:35,
                        },
                    },
                    span: 1:17-1:36,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "Set",
                        span: 1:39-1:42,
                    },
                    TypeArgs: []dts_parser.TypeAnn{
                        &dts_parser.PrimitiveType{
                            Kind: 8,
                            span: 1:43-1:50,
                        },
                    },
                    span: 1:39-1:51,
                },
            },
            span: 1:17-1:51,
        },
    },
    span: 1:1-1:51,
}
---

[TestTypeReferenceEdgeCases/single_type_arg - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Promise",
        span: 1:1-1:8,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.PrimitiveType{
            Kind: 2,
            span: 1:9-1:13,
        },
    },
    span: 1:1-1:14,
}
---

[TestTypeReferenceEdgeCases/deeply_nested_qualified_name - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Member{
        Left: &dts_parser.Member{
            Left: &dts_parser.Member{
                Left: &dts_parser.Member{
                    Left: &dts_parser.Ident{
                        Name: "A",
                        span: 1:1-1:2,
                    },
                    Right: &dts_parser.Ident{
                        Name: "B",
                        span: 1:3-1:4,
                    },
                },
                Right: &dts_parser.Ident{
                    Name: "C",
                    span: 1:5-1:6,
                },
            },
            Right: &dts_parser.Ident{
                Name: "D",
                span: 1:7-1:8,
            },
        },
        Right: &dts_parser.Ident{
            Name: "E",
            span: 1:9-1:10,
        },
    },
    span: 1:1-1:10,
}
---

[TestTypeReferenceEdgeCases/type_args_with_union - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Result",
        span: 1:1-1:7,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.UnionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 1:8-1:14,
                },
                &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 1:17-1:23,
                },
            },
            span: 1:8-1:23,
        },
    },
    span: 1:1-1:24,
}
---

[TestTypeReferenceEdgeCases/type_args_with_intersection - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Combined",
        span: 1:1-1:9,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.IntersectionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "Foo",
                        span: 1:10-1:13,
                    },
                    span: 1:10-1:13,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "Bar",
                        span: 1:16-1:19,
                    },
                    span: 1:16-1:19,
                },
            },
            span: 1:10-1:19,
        },
    },
    span: 1:1-1:20,
}
---

[TestTypeReferenceEdgeCases/deeply_nested_type_args - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "A",
        span: 1:1-1:2,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "B",
                span: 1:3-1:4,
            },
            TypeArgs: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "C",
                        span: 1:5-1:6,
                    },
                    TypeArgs: []dts_parser.TypeAnn{
                        &dts_parser.TypeReference{
                            Name: &dts_parser.Ident{
                                Name: "D",
                                span: 1:7-1:8,
                            },
                            TypeArgs: []dts_parser.TypeAnn{
                                &dts_parser.TypeReference{
                                    Name: &dts_parser.Ident{
                                        Name: "E",
                                        span: 1:9-1:10,
                                    },
                                    span: 1:9-1:10,
                                },
                            },
                            span: 1:7-1:11,
                        },
                    },
                    span: 1:5-1:12,
                },
            },
            span: 1:3-1:13,
        },
    },
    span: 1:1-1:14,
}
---

[TestTypeReferenceEdgeCases/multiple_qualified_names_with_type_args - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Member{
        Left: &dts_parser.Ident{
            Name: "Foo",
            span: 1:1-1:4,
        },
        Right: &dts_parser.Ident{
            Name: "Bar",
            span: 1:5-1:8,
        },
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Member{
                Left: &dts_parser.Ident{
                    Name: "Baz",
                    span: 1:9-1:12,
                },
                Right: &dts_parser.Ident{
                    Name: "Qux",
                    span: 1:13-1:16,
                },
            },
            span: 1:9-1:16,
        },
    },
    span: 1:1-1:17,
}
---

[TestParseModule/empty_module - 1]
&dts_parser.Module{}
---

[TestParseModule/module_with_line_comments - 1]
&dts_parser.Module{}
---

[TestParseModule/module_with_block_comments - 1]
&dts_parser.Module{}
---

[TestParseModule/module_with_mixed_comments - 1]
&dts_parser.Module{}
---

[TestNegativeLiterals/negative_number - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.LiteralType{
        Literal: &dts_parser.NumberLiteral{
            Value: -42,
            span: 1:1-1:4,
        },
        span: 1:1-1:4,
    },
}
---

[TestNegativeLiterals/negative_float - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.LiteralType{
        Literal: &dts_parser.NumberLiteral{
            Value: -3.14,
            span: 1:1-1:6,
        },
        span: 1:1-1:6,
    },
}
---

[TestWhitespaceHandling/union_with_spaces - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.UnionType{
        Types: []dts_parser.TypeAnn{
            &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:1-1:7,
            },
            &dts_parser.PrimitiveType{
                Kind: 7,
                span: 1:12-1:18,
            },
        },
        span: 1:1-1:18,
    },
}
---

[TestWhitespaceHandling/intersection_with_spaces - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.IntersectionType{
        Types: []dts_parser.TypeAnn{
            &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "Foo",
                    span: 1:1-1:4,
                },
                span: 1:1-1:4,
            },
            &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "Bar",
                    span: 1:9-1:12,
                },
                span: 1:9-1:12,
            },
        },
        span: 1:1-1:12,
    },
}
---

[TestWhitespaceHandling/type_args_with_spaces - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "Array",
            span: 1:1-1:6,
        },
        TypeArgs: []dts_parser.TypeAnn{
            &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:9-1:15,
            },
        },
        span: 1:1-1:17,
    },
}
---

[TestWhitespaceHandling/qualified_name_with_spaces_around_dots - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.TypeReference{
        Name: &dts_parser.Member{
            Left: &dts_parser.Member{
                Left: &dts_parser.Ident{
                    Name: "Foo",
                    span: 1:1-1:4,
                },
                Right: &dts_parser.Ident{
                    Name: "Bar",
                    span: 1:7-1:10,
                },
            },
            Right: &dts_parser.Ident{
                Name: "Baz",
                span: 1:13-1:16,
            },
        },
        span: 1:1-1:16,
    },
}
---

[TestWhitespaceHandling/parens_with_spaces - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.ParenthesizedType{
        Type: &dts_parser.PrimitiveType{
            Kind: 6,
            span: 1:4-1:10,
        },
        span: 1:1-1:13,
    },
}
---

[TestWhitespaceHandling/newlines_in_union - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.UnionType{
        Types: []dts_parser.TypeAnn{
            &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1:1-1:7,
            },
            &dts_parser.PrimitiveType{
                Kind: 7,
                span: 2:1-2:7,
            },
            &dts_parser.PrimitiveType{
                Kind: 8,
                span: 3:1-3:8,
            },
        },
        span: 1:1-3:8,
    },
}
---

[TestMixedOperatorPrecedence/intersection_binds_tighter_than_union - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "A",
                span: 1:1-1:2,
            },
            span: 1:1-1:2,
        },
        &dts_parser.IntersectionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "B",
                        span: 1:5-1:6,
                    },
                    span: 1:5-1:6,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "C",
                        span: 1:9-1:10,
                    },
                    span: 1:9-1:10,
                },
            },
            span: 1:5-1:10,
        },
    },
    span: 1:1-1:10,
}
---

[TestMixedOperatorPrecedence/multiple_intersections_in_union - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.IntersectionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "A",
                        span: 1:1-1:2,
                    },
                    span: 1:1-1:2,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "B",
                        span: 1:5-1:6,
                    },
                    span: 1:5-1:6,
                },
            },
            span: 1:1-1:6,
        },
        &dts_parser.IntersectionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "C",
                        span: 1:9-1:10,
                    },
                    span: 1:9-1:10,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "D",
                        span: 1:13-1:14,
                    },
                    span: 1:13-1:14,
                },
            },
            span: 1:9-1:14,
        },
        &dts_parser.IntersectionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "E",
                        span: 1:17-1:18,
                    },
                    span: 1:17-1:18,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "F",
                        span: 1:21-1:22,
                    },
                    span: 1:21-1:22,
                },
            },
            span: 1:17-1:22,
        },
    },
    span: 1:1-1:22,
}
---

[TestMixedOperatorPrecedence/parentheses_override_precedence - 1]
&dts_parser.IntersectionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.ParenthesizedType{
            Type: &dts_parser.UnionType{
                Types: []dts_parser.TypeAnn{
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "A",
                            span: 1:2-1:3,
                        },
                        span: 1:2-1:3,
                    },
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "B",
                            span: 1:6-1:7,
                        },
                        span: 1:6-1:7,
                    },
                },
                span: 1:2-1:7,
            },
            span: 1:1-1:8,
        },
        &dts_parser.ParenthesizedType{
            Type: &dts_parser.UnionType{
                Types: []dts_parser.TypeAnn{
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "C",
                            span: 1:12-1:13,
                        },
                        span: 1:12-1:13,
                    },
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "D",
                            span: 1:16-1:17,
                        },
                        span: 1:16-1:17,
                    },
                },
                span: 1:12-1:17,
            },
            span: 1:11-1:18,
        },
    },
    span: 1:1-1:18,
}
---

[TestMixedOperatorPrecedence/complex_nested_structure - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "A",
                span: 1:1-1:2,
            },
            span: 1:1-1:2,
        },
        &dts_parser.IntersectionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "B",
                        span: 1:5-1:6,
                    },
                    span: 1:5-1:6,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "C",
                        span: 1:9-1:10,
                    },
                    span: 1:9-1:10,
                },
            },
            span: 1:5-1:10,
        },
        &dts_parser.ParenthesizedType{
            Type: &dts_parser.IntersectionType{
                Types: []dts_parser.TypeAnn{
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "D",
                            span: 1:14-1:15,
                        },
                        span: 1:14-1:15,
                    },
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "E",
                            span: 1:18-1:19,
                        },
                        span: 1:18-1:19,
                    },
                },
                span: 1:14-1:19,
            },
            span: 1:13-1:20,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "F",
                span: 1:23-1:24,
            },
            span: 1:23-1:24,
        },
    },
    span: 1:1-1:24,
}
---

[TestSingleCharacterTypes/single_letter_type - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "T",
        span: 1:1-1:2,
    },
    span: 1:1-1:2,
}
---

[TestSingleCharacterTypes/single_char_string_literal - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.StringLiteral{
        Value: "a",
        span: 1:1-1:4,
    },
    span: 1:1-1:4,
}
---

[TestSingleCharacterTypes/single_digit_number_literal - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.NumberLiteral{
        Value: 1,
        span: 1:1-1:2,
    },
    span: 1:1-1:2,
}
---

[TestSingleCharacterTypes/zero_literal - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.NumberLiteral{
        span: 1:1-1:2,
    },
    span: 1:1-1:2,
}
---

[TestQualifiedIdentifierBoundaries/two_parts - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.TypeReference{
        Name: &dts_parser.Member{
            Left: &dts_parser.Ident{
                Name: "A",
                span: 1:1-1:2,
            },
            Right: &dts_parser.Ident{
                Name: "B",
                span: 1:3-1:4,
            },
        },
        span: 1:1-1:4,
    },
}
---

[TestQualifiedIdentifierBoundaries/ten_parts - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.TypeReference{
        Name: &dts_parser.Member{
            Left: &dts_parser.Member{
                Left: &dts_parser.Member{
                    Left: &dts_parser.Member{
                        Left: &dts_parser.Member{
                            Left: &dts_parser.Member{
                                Left: &dts_parser.Member{
                                    Left: &dts_parser.Member{
                                        Left: &dts_parser.Member{
                                            Left: &dts_parser.Ident{
                                                Name: "A",
                                                span: 1:1-1:2,
                                            },
                                            Right: &dts_parser.Ident{
                                                Name: "B",
                                                span: 1:3-1:4,
                                            },
                                        },
                                        Right: &dts_parser.Ident{
                                            Name: "C",
                                            span: 1:5-1:6,
                                        },
                                    },
                                    Right: &dts_parser.Ident{
                                        Name: "D",
                                        span: 1:7-1:8,
                                    },
                                },
                                Right: &dts_parser.Ident{
                                    Name: "E",
                                    span: 1:9-1:10,
                                },
                            },
                            Right: &dts_parser.Ident{
                                Name: "F",
                                span: 1:11-1:12,
                            },
                        },
                        Right: &dts_parser.Ident{
                            Name: "G",
                            span: 1:13-1:14,
                        },
                    },
                    Right: &dts_parser.Ident{
                        Name: "H",
                        span: 1:15-1:16,
                    },
                },
                Right: &dts_parser.Ident{
                    Name: "I",
                    span: 1:17-1:18,
                },
            },
            Right: &dts_parser.Ident{
                Name: "J",
                span: 1:19-1:20,
            },
        },
        span: 1:1-1:20,
    },
}
---

[TestQualifiedIdentifierBoundaries/single_identifier_followed_by_dot - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{
        &dts_parser.Error{
            Span: 1:3-1:3,
            Message: "Expected identifier after '.'",
        },
    },
    "typeAnn": nil,
}
---

[TestQualifiedIdentifierBoundaries/starts_with_dot - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": nil,
}
---

[TestTypeArgumentsBoundaries/single_arg_no_spaces - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "A",
        span: 1:1-1:2,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "B",
                span: 1:3-1:4,
            },
            span: 1:3-1:4,
        },
    },
    span: 1:1-1:5,
}
---

[TestTypeArgumentsBoundaries/ten_type_args - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Fn",
        span: 1:1-1:3,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "A",
                span: 1:4-1:5,
            },
            span: 1:4-1:5,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "B",
                span: 1:7-1:8,
            },
            span: 1:7-1:8,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "C",
                span: 1:10-1:11,
            },
            span: 1:10-1:11,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "D",
                span: 1:13-1:14,
            },
            span: 1:13-1:14,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "E",
                span: 1:16-1:17,
            },
            span: 1:16-1:17,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "F",
                span: 1:19-1:20,
            },
            span: 1:19-1:20,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "G",
                span: 1:22-1:23,
            },
            span: 1:22-1:23,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "H",
                span: 1:25-1:26,
            },
            span: 1:25-1:26,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "I",
                span: 1:28-1:29,
            },
            span: 1:28-1:29,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "J",
                span: 1:31-1:32,
            },
            span: 1:31-1:32,
        },
    },
    span: 1:1-1:33,
}
---

[TestTypeArgumentsBoundaries/nested_three_levels - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "A",
        span: 1:1-1:2,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "B",
                span: 1:3-1:4,
            },
            TypeArgs: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "C",
                        span: 1:5-1:6,
                    },
                    TypeArgs: []dts_parser.TypeAnn{
                        &dts_parser.TypeReference{
                            Name: &dts_parser.Ident{
                                Name: "D",
                                span: 1:7-1:8,
                            },
                            span: 1:7-1:8,
                        },
                    },
                    span: 1:5-1:9,
                },
            },
            span: 1:3-1:10,
        },
    },
    span: 1:1-1:11,
}
---

[TestTypeArgumentsBoundaries/mixed_primitives_and_refs - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Map",
        span: 1:1-1:4,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.PrimitiveType{
            Kind: 6,
            span: 1:5-1:11,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Array",
                span: 1:13-1:18,
            },
            TypeArgs: []dts_parser.TypeAnn{
                &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 1:19-1:25,
                },
            },
            span: 1:13-1:26,
        },
    },
    span: 1:1-1:27,
}
---

[TestTypeArgumentsBoundaries/union_in_type_arg - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Result",
        span: 1:1-1:7,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.UnionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "Success",
                        span: 1:8-1:15,
                    },
                    span: 1:8-1:15,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "Error",
                        span: 1:18-1:23,
                    },
                    span: 1:18-1:23,
                },
            },
            span: 1:8-1:23,
        },
    },
    span: 1:1-1:24,
}
---

[TestTypeArgumentsBoundaries/intersection_in_type_arg - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Combined",
        span: 1:1-1:9,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.IntersectionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "Base",
                        span: 1:10-1:14,
                    },
                    span: 1:10-1:14,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "Mixin",
                        span: 1:17-1:22,
                    },
                    span: 1:17-1:22,
                },
            },
            span: 1:10-1:22,
        },
    },
    span: 1:1-1:23,
}
---

[TestStringLiteralVariations/empty_string - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.StringLiteral{
        span: 1:1-1:3,
    },
    span: 1:1-1:3,
}
---

[TestStringLiteralVariations/string_with_spaces - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.StringLiteral{
        Value: "hello world",
        span: 1:1-1:14,
    },
    span: 1:1-1:14,
}
---

[TestStringLiteralVariations/string_with_special_chars - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.StringLiteral{
        Value: "hello\\nworld",
        span: 1:1-1:15,
    },
    span: 1:1-1:15,
}
---

[TestStringLiteralVariations/string_with_unicode - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.StringLiteral{
        Value: "hello 🌍",
        span: 1:1-1:13,
    },
    span: 1:1-1:13,
}
---

[TestModuleWithUnexpectedTokens/random_characters - 1]
map[string]interface {}{
    "errors": 10,
    "module": &dts_parser.Module{},
}
---

[TestModuleWithUnexpectedTokens/partial_type - 1]
map[string]interface {}{
    "errors": 4,
    "module": &dts_parser.Module{},
}
---

[TestModuleWithUnexpectedTokens/mismatched_brackets - 1]
map[string]interface {}{
    "errors": 12,
    "module": &dts_parser.Module{},
}
---

[TestModuleWithUnexpectedTokens/number_at_start - 1]
map[string]interface {}{
    "errors": 2,
    "module": &dts_parser.Module{},
}
---

[TestLiteralTypes/negative_number_literal - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.NumberLiteral{
        Value: -1,
        span: 1:1-1:3,
    },
    span: 1:1-1:3,
}
---

[TestLiteralTypes/negative_decimal - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.NumberLiteral{
        Value: -3.14,
        span: 1:1-1:6,
    },
    span: 1:1-1:6,
}
---

[TestLiteralTypes/hex_literal - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.NumberLiteral{
        Value: 255,
        span: 1:1-1:5,
    },
    span: 1:1-1:5,
}
---

[TestLiteralTypes/negative_hex - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.NumberLiteral{
        Value: -255,
        span: 1:1-1:6,
    },
    span: 1:1-1:6,
}
---

[TestUnionTypes/with_leading_pipe - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.PrimitiveType{
            Kind: 6,
            span: 1:3-1:9,
        },
        &dts_parser.PrimitiveType{
            Kind: 7,
            span: 1:12-1:18,
        },
    },
    span: 1:1-1:18,
}
---

[TestUnionTypes/with_leading_pipe_three_types - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.PrimitiveType{
            Kind: 6,
            span: 1:3-1:9,
        },
        &dts_parser.PrimitiveType{
            Kind: 7,
            span: 1:12-1:18,
        },
        &dts_parser.PrimitiveType{
            Kind: 8,
            span: 1:21-1:28,
        },
    },
    span: 1:1-1:28,
}
---
